<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>usb_cam</name>
  <version>0.3.6</version>
  <description>Driver for V4L USB Cameras</description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
  <license>BSD</license>

  <author email="benjamin.pitzer@bosch.com">Benjamin Pitzer</author>
  <author email="blazej@fictionlab.pl">Błażej Sowa</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>ffmpeg</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>ddynamic_reconfigure</build_depend>

  <build_export_depend>sensor_msgs</build_export_depend>

  <exec_depend>image_transport</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ffmpeg</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>image_view</exec_depend>
  <exec_depend>ddynamic_reconfigure</exec_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>